# Geometric_vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Angle/: CMakeLists.txt
Angle/header/: angles.h  angles.hpp
Angle/source/: angles.cpp
ConvexHull/: CMakeLists.txt
ConvexHull/ConvexHull2D/: CMakeLists.txt
ConvexHull/ConvexHull2D/header/: gift_warpping.hpp  grahams.hpp
ConvexHull/ConvexHull2D/source/: gift_warpping.cpp  grahams.cpp
ConvexHull/ConvexHull3D/: CMakeLists.txt
ConvexHull/ConvexHull3D/header/: increamental_sort.hpp
ConvexHull/ConvexHull3D/source/: increamental_sort.cpp
ConvexHull/header/: gift_warpping.hpp  grahams.hpp
ConvexHull/source/: gift_warpping.cpp  grahams.cpp
Core/: CMakeLists.txt
DCEL/: CMakeLists.txt
DCEL/header/: DCEL.h  DCEL.hpp  Edge.h  Edge.hpp  Face.h  Face.hpp  Polygon.h  Polygon.hpp  Vertex.h  Vertex.hpp
DCEL/source/: DCEL.cpp  Edge.cpp  Face.cpp  Polygon.cpp  Vertex.cpp
Distance/: CMakeLists.txt
Distance/header/: distance.hpp
Distance/source/: distance.cpp
GeometricUtils/: CMakeLists.txt
GeometricUtils/header/: geo_utils.hpp
GeometricUtils/source/: geo_utils.cpp
Intersection/: CMakeLists.txt
Intersection/header/: intersection.hpp
Intersection/source/: intersection.cpp
Line/: CMakeLists.txt
Line/header/: line.hpp
Line/source/: line.cpp
Monotone_polygon_partitioning/: CMakeLists.txt
Monotone_polygon_partitioning/header/: EdgeWrapper.hpp  VertexWrapper.hpp  partitioning.hpp  vertex_type.hpp
Monotone_polygon_partitioning/source/: EdgeWrapper.cpp  VertexWrapper.cpp  partitioning.cpp  vertex_type.cpp
Plane/: CMakeLists.txt
Plane/header/: plane.hpp
Plane/source/: plane.cpp
Point/: CMakeLists.txt
Point/header/: point.hpp
Point/source/: point.cpp
SweepLine/: CMakeLists.txt
SweepLine/LineSegmentIntersection/: CMakeLists.txt
SweepLine/LineSegmentIntersection/header/: Custom_priority_queue.hpp  event.hpp  intersection.hpp  line_segment.hpp  line_segment_intersection.hpp
SweepLine/LineSegmentIntersection/source/: Custom_priority_queue.cpp  event.cpp  intersection.cpp  line_segment.cpp  line_segment_intersection.cpp
SweepLine/MonotonePolygonPartitioning/: CMakeLists.txt
SweepLine/MonotonePolygonPartitioning/header/: EdgeWrapper.hpp  VertexWrapper.hpp  partitioning.hpp  vertex_type.hpp
SweepLine/MonotonePolygonPartitioning/source/: EdgeWrapper.cpp  partitioning.cpp
Sweep_Line/: CMakeLists.txt
Sweep_Line/Line_segment_intersection/: CMakeLists.txt
Sweep_Line/Line_segment_intersection/header/: Segment2d.hpp  event.hpp  event_queue.hpp  line_segment.hpp  line_segment_intersection.hpp
Sweep_Line/Line_segment_intersection/source/: Custom_priority_queue.cpp  Segment2d.cpp  event.cpp  line_segment.cpp  line_segment_intersection.cpp
Vector/header/: vector.hpp
Vector/source/: vector.cpp
angle/: CMakeLists.txt
angle/header/: angles.h
angle/source/: angles.cpp
core/: CMakeLists.txt
core/header/: core.h  core.hpp
core/source/: core.cpp
distance/: CMakeLists.txt
distance/header/: distance.h  distance.hpp
distance/source/: distance.cpp
geometric_utils/: CMakeLists.txt
geometric_utils/header/: geo_utils.h  geo_utils.hpp
geometric_utils/source/: geo_utils.cpp
intersection/: CMakeLists.txt
intersection/header/: intersection.h  intersection.hpp
intersection/source/: intersection.cpp
line/: CMakeLists.txt
line/header/: line.h  line.hpp
line/source/: line.cpp
plane/: CMakeLists.txt
plane/header/: plane.h  plane.hpp
plane/source/: plane.cpp
point/: CMakeLists.txt
point/header/: point.h  point.hpp
point/source/: point.cpp
vector/: CMakeLists.txt
vector/header/: vector.h  vector.hpp
vector/source/: vector.cpp
(+4 files in other folders)
